index.html のお色直し

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
 </head>
 
 <body>
-		<a href="main.html">ガイドブック</a>
-		<hr />
-		<span class="copyright"></span>
+	<h1>ZipHttpd ver 1.0 取扱説明</h1>
+	<div class="transdiv"><div id="google_translate_element"></div></div>
+	<div class="ind1em">
+		<h2>ガイドブック</h2>
+		<a href="main.html" class="btn btn--orange">ガイドブック本文</a>
+		<h2>副読本</h2>
+		<p class="ind1em">作成中...</p>
+	</div>
+	<hr />
+	<span class="copyright"></span>
 </body>
 
 </html>
